# account-cooker

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUBMISSION.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/account-cooker-cli/: Cargo.toml
crates/account-cooker-cli/src/: main.rs
crates/account-cooker-config/: Cargo.toml
crates/account-cooker-config/src/: lib.rs
crates/account-cooker-core/: Cargo.toml
crates/account-cooker-core/src/: adapter.rs  domain.rs  graph.rs  lib.rs  planner.rs  policy.rs
crates/account-cooker-evaluator/: Cargo.toml
crates/account-cooker-evaluator/src/: lib.rs
crates/account-cooker-keystore/: Cargo.toml
crates/account-cooker-keystore/src/: lib.rs
crates/account-cooker-protocols/: Cargo.toml
crates/account-cooker-protocols/src/: lib.rs
crates/account-cooker-scheduler/: Cargo.toml
crates/account-cooker-scheduler/src/: lib.rs  rpc.rs
crates/account-cooker-store/: Cargo.toml
crates/account-cooker-store/src/: lib.rs
docs/: adding-a-protocol.md  architecture.md  behavioral-model.md  dependencies.md  operations.md  privacy-evaluation.md  responsible-use.md  scheduler-and-recovery.md  threat-model.md
evidence/: README.md
examples/: dry-run-1000-agents.toml  local-surfpool.toml
examples/personas/: active-trader.toml  casual-holder.toml  low-frequency-long-term.toml  staking-oriented.toml  token-explorer.toml
migrations/: 0001_initial.sql  0002_budget_reservations.sql  0003_protocol_rate_limits.sql
xtask/: Cargo.toml
xtask/src/: main.rs
