[workspace]
resolver = "2"
members = [
  "crates/account-cooker-cli",
  "crates/account-cooker-config",
  "crates/account-cooker-core",
  "crates/account-cooker-evaluator",
  "crates/account-cooker-keystore",
  "crates/account-cooker-protocols",
  "crates/account-cooker-scheduler",
  "crates/account-cooker-store",
  "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/solanabr/account-cooker"
rust-version = "1.97"

[workspace.dependencies]
age = "0.12.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
hex = "0.4.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.0", features = ["bundled", "chrono", "uuid"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
solana-hash = "4.2.0"
solana-instruction = "3.2.0"
solana-keypair = "3.1.0"
solana-message = "4.3.0"
solana-pubkey = { version = "3.0.0", features = ["serde", "rand"] }
solana-signature = "3.3.0"
solana-signer = "3.0.0"
solana-stake-interface = { version = "2.0.0", features = ["bincode"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-transaction = { version = "4.1.0", features = ["serde", "wincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-memo-interface = "2.0.0"
spl-token-interface = "2.0.0"
surfpool-sdk = "=1.5.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
