[package]
name = "account-cooker-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "account-cooker"
path = "src/main.rs"

[dependencies]
account-cooker-config = { version = "0.1.0", path = "../account-cooker-config" }
account-cooker-core = { version = "0.1.0", path = "../account-cooker-core" }
account-cooker-evaluator = { version = "0.1.0", path = "../account-cooker-evaluator" }
account-cooker-protocols = { version = "0.1.0", path = "../account-cooker-protocols" }
account-cooker-scheduler = { version = "0.1.0", path = "../account-cooker-scheduler" }
account-cooker-store = { version = "0.1.0", path = "../account-cooker-store" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true
rand.workspace = true
solana-keypair.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
