[package]
name = "account-cooker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bs58.workspace = true
chrono.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest = "1.9.0"
toml.workspace = true
