[package]
name = "account-cooker-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
account-cooker-config = { version = "0.1.0", path = "../account-cooker-config" }
account-cooker-core = { version = "0.1.0", path = "../account-cooker-core" }
sha2.workspace = true
solana-instruction.workspace = true
solana-pubkey.workspace = true
solana-stake-interface.workspace = true
solana-system-interface.workspace = true
spl-associated-token-account-interface.workspace = true
spl-memo-interface.workspace = true
spl-token-interface.workspace = true

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
