[package]
name = "account-cooker-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
account-cooker-core = { version = "0.1.0", path = "../account-cooker-core" }
account-cooker-store = { version = "0.1.0", path = "../account-cooker-store" }
async-trait.workspace = true
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-hash.workspace = true
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true
solana-signer.workspace = true
solana-transaction.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
account-cooker-config = { version = "0.1.0", path = "../account-cooker-config" }
account-cooker-protocols = { version = "0.1.0", path = "../account-cooker-protocols" }
tempfile.workspace = true
